finished 4+ (I know it ain't pretty. It got way too complicated. rugh would be proud of my spaghetti)

--- a/webroot/404.html
+++ b/webroot/404.html
@@ -19,7 +19,7 @@
 
 <!-- Replace 'YOUR_VIDEO_ID' with the actual ID of your YouTube video -->
 <!-- <iframe id="vid" width="600" height="600" src="https://www.youtube.com/embed/udJqZmOXjNA?si=mEShJRsQKM-iHpOO?autoplay=1&mute=0&start=0" allow="autoplay"></iframe> -->
-<img class="center-screen" src="/gifs/coolgif.gif">
+<img class="center-screen" src="/imgs/coolgif.gif">
 <h1 class="center-screen">Get F*cked</h1>
 
 </body>
